add test cases for doctor and appointment service